Set up Nav links and created basic structure of Home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,47 @@
     <link rel="stylesheet" href="styles.css">
     <title>Paul's Portfolio</title>
 </head>
+
+<header>Paul's Portfolio: An Eldritch HTML Creation</header>
+
 <body>
+    <div id="flex"> <!-- Beginning of flex container -->
+        
+    <div class="card">
+        <nav id="navbar">
+            <a class="links" href="bio.html">Bio</a>
+            <a class="links" href="projects.html">Projects</a>
+            <a class="links" href="contact.html">Contact</a>
+        </nav>
+    </div>
+
+    <div class="card">
+        <main id="homeMain">
+            <section>
+                <h2> About This Project: </h2>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi at, quis beatae velit maxime quas dolore qui quia reprehenderit. Vel inventore soluta ipsa eligendi, odit maxime explicabo officiis sed esse!<!-- This is where my project synopsis will be --></p>
+
+                <aside>
+                    <h4>Inspiration:</h4>
+                    <p> stuff <!-- insert gaming inspirations --></p>
+                </aside>
+
+            </section>
+
+        </main>
+    </div>
+
     <h1>Welcome to my Portfolio</h1>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio provident dignissimos ipsam! Vitae nostrum aperiam necessitatibus, tenetur ipsam illum ducimus harum sapiente inventore. Iure, voluptates optio quisquam voluptas nam impedit.</p>
+
+    </div> <!--  end of flex container -->
 </body>
+
+<footer>
+    <a class="links" href="bio.html">Bio</a>
+    <a class="links" href="projects.html">Projects</a>
+    <a class="links" href="contact.html">Contact</a>
+</footer>
 </html>
